--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -9,7 +9,9 @@
           "defaultAuthentication": {
             "authenticationType": "API_KEY",
             "apiKeyConfig": {
-              "apiKeyExpirationDays": 7
+              "apiKeyExpirationDays": 365,
+              "apiKeyExpirationDate": "2023-05-18T18:29:07.272Z",
+              "description": "da2-xich6rwqijgmlo7nuiih7fny2m"
             }
           },
           "additionalAuthenticationProviders": []
