--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^2.18.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.5",
     "apexcharts": "^3.27.1",
+    "aws-amplify": "^4.3.22",
     "install": "^0.13.0",
     "react": "^18.1.0",
     "react-apexcharts": "^1.3.9",
